# ctxhelpr

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.es.md  README.md  build.rs  cliff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  release-build.yml  release-version.yml  release.yml  tag-release.yml
cf/: worker.js
docs/: benchmark-instructions.es.md  benchmark-instructions.md  benchmark-prompt.md  developer-guide.es.md  developer-guide.md  indexing-strategy.es.md  indexing-strategy.md  user-guide.es.md  user-guide.md
scripts/: cf-worker.js  install.sh
src/: config.rs  lib.rs  main.rs  skills.rs
src/assets/: index_command.md  reindex_command.md  skill.md
src/cli/: config_cmd.rs  disable.rs  enable.rs  install.rs  mod.rs  permissions.rs  perms.rs  repos.rs  setup.rs  style.rs  uninstall.rs  update.rs
src/indexer/: hasher.rs  mod.rs
src/indexer/languages/: markdown.rs  mod.rs  python.rs  ruby.rs  rust_lang.rs  typescript.rs
src/mcp/: indexing_tracker.rs  mod.rs
src/output/: formatter.rs  mod.rs  token_budget.rs
src/server/: mod.rs
src/storage/: mod.rs  schema.sql  tokenizer.rs
src/watcher/: debouncer.rs  mod.rs
tests/: integration.rs
tests/fixtures/markdown/: sample.md
tests/fixtures/python/: sample.py
tests/fixtures/ruby/: sample.rb
tests/fixtures/rust/: sample.rs
tests/fixtures/typescript/: arrow-functions.ts  barrel.ts  complex.ts  declare-module.d.ts  export-default.ts  imports.ts  new-expression.ts  simple.ts  test-file.ts  vendor.min.js
