[package]
name = "ctxhelpr"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "Semantic code indexing MCP server for Claude Code"
license = "MIT"
repository = "https://github.com/rijuma/ctxhelpr"
homepage = "https://github.com/rijuma/ctxhelpr"
readme = "README.md"
keywords = ["mcp", "code-indexing", "semantic", "tree-sitter", "claude"]
categories = ["development-tools"]

[dependencies]
# MCP server
rmcp = { version = "0.13", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-md = "0.5"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "6"
dialoguer = "0.12"
owo-colors = { version = "4", features = ["supports-colors"] }

# File watching
notify = "7"

# Utilities
ignore = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
